--- a/wp-content/themes/tomoveit/include/components/Button/Button.scss
+++ b/wp-content/themes/tomoveit/include/components/Button/Button.scss
@@ -1,11 +1,34 @@
 @import '../../scss/colors';
+@import '../../scss/config';
 
 .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+
   background: $color-blue;
   color: white;
-  padding: 1.0625rem 8.125rem;
+
+  font-style: italic;
+  font-weight: 900;
+  font-size: 1.125rem;
+  line-height: 1.25px;
+
   text-decoration: none;
-  font-weight: bold;
-  font-size: 1.6875rem;
   border-radius: 4px;
+
+  height: 3.75rem;
+
+  &:hover {
+    background: $color-black;
+  }
+}
+
+@media all and (min-width: $breakpoint-m) {
+  .button {
+    padding: 1.0625rem 8.125rem;
+    font-size: 1.6875rem;
+  }
 }
