--- a/wp-content/themes/tomoveit/include/components/Container/Container.scss
+++ b/wp-content/themes/tomoveit/include/components/Container/Container.scss
@@ -1,3 +1,19 @@
 @import '../../scss/config';
 @import '../../scss/section';
 @import '../../scss/container';
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  height: calc(100vh - 3.75rem - 6.25rem);
+  margin-bottom: 3.75rem;
+}
+
+@media all and (min-width: $breakpoint-m) {
+  .wrapper {
+    height: calc(100vh - 18.75rem);
+    margin-bottom: 5rem;
+  }
+}
