--- a/wp-content/themes/tomoveit/include/components/Input/Input.scss
+++ b/wp-content/themes/tomoveit/include/components/Input/Input.scss
@@ -6,17 +6,23 @@ $n-char: 4;
 $in-w: $n-char*($char-w + $gap);
 
 input {
+  color: $color-blue;
   display: block;
-  margin: 2em auto;
+  caret-color: transparent;
   border: none;
   padding: 0;
+  margin: 0 0 6.25rem 0;
   width: $in-w;
-  background: repeating-linear-gradient(90deg, $color-blue 0, $color-blue $char-w, transparent 0, transparent $char-w + $gap) 0 100%/ #{$in-w - $gap} 2px no-repeat;
-  font: 5ch droid monserant mono, consolas, monospace;
+  background: repeating-linear-gradient(90deg, $color-blue 0, $color-blue $char-w, transparent 0, transparent $char-w + $gap) 0 100%/ #{$in-w - $gap} 4px no-repeat;
+  font: 7ch droid monserant mono, consolas, monospace;
   letter-spacing: $gap;
 
   &:focus {
     outline: none;
+    color: $color-blue;
+  }
+
+  select {
     color: $color-blue;
   }
 }
