--- a/wp-content/themes/tomoveit/include/components/Presentational/BottomContainer/BottomContainer.scss
+++ b/wp-content/themes/tomoveit/include/components/Presentational/BottomContainer/BottomContainer.scss
@@ -1,6 +1,7 @@
-.home {
+.bottom-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
+
+  margin-top: auto;
 }
