--- a/wp-content/themes/tomoveit/include/scss/general.scss
+++ b/wp-content/themes/tomoveit/include/scss/general.scss
@@ -17,7 +17,6 @@ body > svg:first-of-type {
 }
 
 a {
-  color: $color-dark-purple;
   transition: color 200ms ease-in-out;
 }
 
@@ -39,6 +38,14 @@ p {
   text-align: center;
   line-height: 1.4rem;
   margin-bottom: 2rem;
+}
+
+span {
+  color: $color-gray;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
