--- a/wp-content/themes/tomoveit/include/components/Button/Button.scss
+++ b/wp-content/themes/tomoveit/include/components/Button/Button.scss
@@ -1,7 +1,7 @@
 @import '../../scss/colors';
 @import '../../scss/config';
 
-.button {
+button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,9 +16,10 @@
   font-size: 1.125rem;
   line-height: 1.25px;
 
-  text-decoration: none;
+  border: none;
   border-radius: 4px;
 
+  text-decoration: none;
   height: 3.75rem;
 
   &:hover {
@@ -27,7 +28,7 @@
 }
 
 @media all and (min-width: $breakpoint-m) {
-  .button {
+  button {
     padding: 1.0625rem 8.125rem;
     font-size: 1.6875rem;
   }
