Added some responsive styling on activities

--- a/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
+++ b/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
@@ -1,4 +1,5 @@
 @import '../../scss/colors';
+@import '../../scss/config';
 
 .card-conatiner {
   height: 100%;
@@ -47,5 +48,26 @@
     height: 6.875rem;
     width: 100%;
     object-fit: cover;
+  }
+}
+
+@media all and (min-width: $breakpoint-m) {
+  .card-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .card {
+    height: auto;
+    width: 100%;
+    padding-bottom: 0;
+
+    &:not(:last-child) {
+      padding-right: 2rem;
+    }
+
+    &__image {
+      height: auto;
+    }
   }
 }
