Fixed box-shadow bug

--- a/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
+++ b/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
@@ -63,7 +63,7 @@
     padding-bottom: 0;
 
     &:not(:last-child) {
-      padding-right: 2rem;
+      margin-right: 2rem;
     }
 
     &__image {
