Minor css changes

--- a/wp-content/themes/tomoveit/include/components/Button/Button.scss
+++ b/wp-content/themes/tomoveit/include/components/Button/Button.scss
@@ -30,6 +30,7 @@ button {
 
 @media all and (min-width: $breakpoint-m) {
   button {
+    width: auto;
     padding: 1.0625rem 8.125rem;
     font-size: 1.6875rem;
   }
