--- a/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
+++ b/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
@@ -61,6 +61,7 @@
     height: auto;
     width: 100%;
     padding-bottom: 0;
+    cursor: pointer;
 
     &:not(:last-child) {
       margin-right: 2rem;
