--- a/wp-content/themes/tomoveit/include/components/Header/Header.scss
+++ b/wp-content/themes/tomoveit/include/components/Header/Header.scss
@@ -1,4 +1,5 @@
 @import '../../scss/config';
+@import '../../scss/colors';
 
 .header {
   height: 6.25rem;
@@ -6,6 +7,42 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 1.25rem;
+}
+
+.header-image {
+  height: 9.375rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+
+  &__back {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  svg {
+    fill: $color-white;
+    width: 2.5rem;
+    height: 1.875rem;
+  }
+
+  p {
+    color: $color-white;
+    margin-bottom: 0;
+  }
+
+  img {
+    display: block;
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media all and (min-width: $breakpoint-m) {
@@ -16,5 +53,15 @@
     align-items: center;
     flex: 0 0 33%;
     margin: 0 5.5rem;
+  }
+
+  .header-image {
+    padding: 0 5.5rem;
+    margin-bottom: 2.5rem;
+    height: 13.75rem;
+
+    p {
+      margin-left: 1.6875rem;
+    }
   }
 }
