--- a/wp-content/themes/tomoveit/include/scss/general.scss
+++ b/wp-content/themes/tomoveit/include/scss/general.scss
@@ -83,8 +83,8 @@ h5, .h5 {
   p {
     font-style: italic;
     font-weight: bold;
-    font-size: 1.6875rem;
-    line-height: 2.0625rem;
+    font-size: 16px;
+    line-height: 24px;
     text-align: center;
     margin-bottom: 2rem;
   }
