--- a/wp-content/themes/tomoveit/include/components/Button/Button.scss
+++ b/wp-content/themes/tomoveit/include/components/Button/Button.scss
@@ -14,7 +14,7 @@
   font-style: italic;
   font-weight: 900;
   font-size: 1.125rem;
-  line-height: 1.25px;
+  line-height: 1.25rem;
 
   border: none;
   border-radius: 4px;
@@ -32,6 +32,6 @@
   .button {
     width: auto;
     padding: 1.0625rem 8.125rem;
-    font-size: 1.6875rem;
+    font-size: 1.3125rem;
   }
 }
