Updated navigation flow

--- a/wp-content/themes/tomoveit/include/pages/Activities/Activities.scss
+++ b/wp-content/themes/tomoveit/include/pages/Activities/Activities.scss
@@ -17,6 +17,12 @@
     &__text {
       padding-right: 12.375rem;
       padding-left: 12.375rem;
+
+      p {
+        font-size: 27px;
+        line-height: 33px;
+        text-align: center;
+      }
     }
   }
 }
