--- a/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
+++ b/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
@@ -55,11 +55,12 @@
   .card-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
   }
 
   .card {
-    height: auto;
-    width: 100%;
+    height: 190px;
+    width: 305px;
     padding-bottom: 0;
     cursor: pointer;
 
