--- a/wp-content/themes/tomoveit/include/scss/general.scss
+++ b/wp-content/themes/tomoveit/include/scss/general.scss
@@ -59,10 +59,11 @@ h2, .h2 {
 }
 
 h3, .h3 {
-  font-weight: 400;
-  font-size: 1.25rem;
-  margin-bottom: 1rem;
-  line-height: 1.5625rem;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
 }
 
 h4, .h4 {
@@ -89,6 +90,11 @@ h5, .h5 {
     margin-bottom: 2rem;
   }
 
+  h3, .h3 {
+    font-size: 27px;
+    line-height: 33px;
+  }
+
   .alignleft {
     float: left;
     margin-right: 1.875rem;
@@ -103,18 +109,6 @@ h5, .h5 {
 }
 
 @media all and (min-width: $breakpoint-xl) {
-  h2, .h2 {
-    font-size: 2rem;
-    line-height: 2.5rem;
-    margin-bottom: 1rem;
-  }
-
-  h3, .h3 {
-    font-size: 1.5rem;
-    line-height: 1.875rem;
-    margin-bottom: 1.25rem;
-  }
-
   h4, .h4 {
     font-size: 1.125rem;
     line-height: 1.25rem;
