--- a/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
@@ -11,7 +11,12 @@
 
   &__button {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+
+    :first-child {
+      margin-bottom: 1.875rem;
+    }
   }
 
   &__text-title {
