--- a/wp-content/themes/tomoveit/include/pages/Activities/Activities.scss
+++ b/wp-content/themes/tomoveit/include/pages/Activities/Activities.scss
@@ -3,11 +3,34 @@
 
 .activities {
   margin: 0 2rem;
+
+  &__celebrate {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h3 {
+      margin-bottom: 2.5rem;
+    }
+
+    img {
+      height: auto;
+      width: 100%;
+    }
+  }
 }
 
 @media all and (min-width: $breakpoint-m) {
   .activities {
     margin: 0 5.0625rem;
+
+    &__celebrate {
+      img {
+        width: 480px;
+        height: 252px;
+      }
+    }
   }
 }
 
