--- a/wp-content/themes/tomoveit/include/pages/Home/Home.scss
+++ b/wp-content/themes/tomoveit/include/pages/Home/Home.scss
@@ -3,4 +3,14 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+
+  &__buttons {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    :first-child {
+      margin-bottom: 2rem;
+    }
+  }
 }
