--- a/wp-content/themes/tomoveit/include/components/Header/Header.scss
+++ b/wp-content/themes/tomoveit/include/components/Header/Header.scss
@@ -7,6 +7,14 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 1.25rem;
+
+  &__stats {
+    svg {
+      cursor: pointer;
+      width: 5rem;
+      height: 5rem;
+    }
+  }
 }
 
 .header-image {
