--- a/wp-content/themes/tomoveit/include/pages/Statistics/Statistics.scss
+++ b/wp-content/themes/tomoveit/include/pages/Statistics/Statistics.scss
@@ -5,10 +5,35 @@
   height: 100%;
   margin: 0 2rem;
 
+  &__stats {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin-bottom: 5rem;
+
+    h1 {
+      font-style: italic;
+      font-weight: bold;
+      font-size: 3rem;
+      line-height: 3.6875rem;
+    }
+
+    span {
+      font-style: italic;
+      font-weight: 500;
+      font-size: 1rem;
+      line-height: 1.6rem;
+      color: $color-black;
+    }
+  }
+
   &__chart-container {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    margin-bottom: 3.5rem;
   }
 }
 
