--- a/wp-content/themes/tomoveit/include/components/Header/Header.scss
+++ b/wp-content/themes/tomoveit/include/components/Header/Header.scss
@@ -15,6 +15,26 @@
       height: 5rem;
     }
   }
+
+  &__back {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+
+    p {
+      margin-bottom: 0;
+      margin-left: 1.6875rem;
+      display: none;
+    }
+
+    svg {
+      fill: $color-black;
+      width: 1.875rem;
+      height: 1.3125rem;
+    }
+  }
 }
 
 .header-image {
@@ -62,6 +82,19 @@
     align-items: center;
     flex: 0 0 33%;
     margin: 0 5.5rem;
+
+    &__back {
+      span {
+        font-style: italic;
+        font-weight: 900;
+        font-size: 1.3125rem;
+        line-height: 1.625rem;
+      }
+
+      p {
+        display: block;
+      }
+    }
   }
 
   .header-image {
