Added loading spinner for login button

--- a/wp-content/themes/tomoveit/include/components/Button/Button.scss
+++ b/wp-content/themes/tomoveit/include/components/Button/Button.scss
@@ -35,8 +35,8 @@
 
 @media all and (min-width: $breakpoint-m) {
   .button {
-    width: auto;
-    padding: 1.0625rem 8.125rem;
+    width: 19.0625rem;
+    //padding: 1.0625rem 8.125rem;
     font-size: 1.3125rem;
   }
 }
