--- a/wp-content/themes/tomoveit/include/components/Button/Button.scss
+++ b/wp-content/themes/tomoveit/include/components/Button/Button.scss
@@ -14,7 +14,7 @@
   font-style: italic;
   font-weight: 900;
   font-size: 1.125rem;
-  line-height: 1.25rem;
+  line-height: 1.375rem;
 
   border: none;
   border-radius: 4px;
@@ -29,7 +29,7 @@
   }
 
   &:hover {
-    background: $color-black;
+    opacity: .8;
   }
 }
 
@@ -37,6 +37,9 @@
   .button {
     width: 19.0625rem;
     //padding: 1.0625rem 8.125rem;
+    font-style: italic;
+    font-weight: 900;
     font-size: 1.3125rem;
+    line-height: 1.6rem;
   }
 }
