--- a/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 
     :first-child {
       margin-bottom: 1.875rem;
