--- a/wp-content/themes/tomoveit/include/scss/colors.scss
+++ b/wp-content/themes/tomoveit/include/scss/colors.scss
@@ -4,5 +4,7 @@ $color-black: #000;
 $color-gray: #bdc3c7;
 $color-blue: #4b4eff;
 
+$color-blue-hover: #3e42fa;
+
 $color-light-green: #1abc9c;
 $color-light-blue: #198df8;
