Installed moments.js and changed titels

--- a/wp-content/themes/tomoveit/include/components/Header/Header.scss
+++ b/wp-content/themes/tomoveit/include/components/Header/Header.scss
@@ -35,6 +35,13 @@
       height: 1.3125rem;
     }
   }
+
+  span {
+    text-transform: uppercase;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
 
 .header-image {
