--- a/wp-content/themes/tomoveit/include/pages/Login/Login.scss
+++ b/wp-content/themes/tomoveit/include/pages/Login/Login.scss
@@ -3,4 +3,11 @@
     margin-top: 1rem;
     color: red;
   }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
