--- a/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
@@ -115,6 +115,7 @@
   }
 
   .card-current {
+    transition: all 500ms ease-in-out;
     margin-bottom: 5rem;
     width: 305px;
     height: auto;
