Added randomize posts in activities page

--- a/wp-content/themes/tomoveit/include/pages/Activities/Activities.scss
+++ b/wp-content/themes/tomoveit/include/pages/Activities/Activities.scss
@@ -28,7 +28,10 @@
   }
 
   &__bottom {
-    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
   span {
