--- a/wp-content/themes/tomoveit/include/pages/Activities/Activities.scss
+++ b/wp-content/themes/tomoveit/include/pages/Activities/Activities.scss
@@ -34,6 +34,11 @@
     flex-direction: column;
   }
 
+  &__button {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
   span {
     margin-top: 5rem;
   }
