Changed color on back button

--- a/wp-content/themes/tomoveit/include/components/Header/Header.scss
+++ b/wp-content/themes/tomoveit/include/components/Header/Header.scss
@@ -56,10 +56,15 @@
     flex-direction: row;
     align-items: center;
     cursor: pointer;
+
+    &--white {
+      svg {
+        fill: $color-white;
+      }
+    }
   }
 
   svg {
-
     width: 2.5rem;
     height: 1.875rem;
   }
