Changed text sizes on back button

--- a/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
+++ b/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
@@ -21,6 +21,8 @@
     top: 50%;
     left: 50%;
 
+    z-index: 1;
+
     width: 1.6875rem;
     height: 1.6875rem;
     transform: translate(-50%, -50%);
@@ -49,6 +51,8 @@
     height: 6.875rem;
     width: 100%;
     object-fit: cover;
+
+    filter: brightness(50%);
 
     img {
       display: block;
