--- a/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
@@ -70,10 +70,15 @@
 
     z-index: 1;
 
-    width: 1.6875rem;
-    height: 1.6875rem;
+    width: 4rem;
+    height: 4rem;
     transform: translate(-50%, -50%);
     fill: $color-white;
+
+    &--single {
+      width: 3rem;
+      height: 2.8rem;
+    }
   }
 
   &__image-container {
