Changed layout for CurrentActivity page

--- a/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
@@ -56,6 +56,7 @@
 .card-current {
   margin-bottom: 2.5rem;
   box-shadow: 0 8px 24px rgba(149, 157, 165, .2);
+  cursor: pointer;
 
   p {
     margin-bottom: 0;
