--- a/wp-content/themes/tomoveit/include/components/StickyButton/StickyButton.scss
+++ b/wp-content/themes/tomoveit/include/components/StickyButton/StickyButton.scss
@@ -31,6 +31,15 @@
   &:hover {
     opacity: .8;
   }
+
+  &__disabled {
+    opacity: .5;
+    cursor: default;
+
+    &:hover {
+      opacity: .5;
+    }
+  }
 }
 
 @media all and (min-width: $breakpoint-m) {
