--- a/wp-content/themes/tomoveit/include/components/Button/Button.scss
+++ b/wp-content/themes/tomoveit/include/components/Button/Button.scss
@@ -23,6 +23,8 @@
   outline: none;
   height: 3.75rem;
 
+  cursor: pointer;
+
   &--white {
     background: $color-white;
     color: $color-blue;
