--- a/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
@@ -3,6 +3,7 @@
 
 .current-activity {
   margin: 0 2rem 6.25rem 2rem;
+  z-index: 3;
 
   &__warp {
     display: flex;
@@ -14,6 +15,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 1;
+
+    button {
+      z-index: 1;
+    }
 
     :first-child {
       margin-bottom: 1.875rem;
@@ -57,6 +63,7 @@
   margin-bottom: 2.5rem;
   box-shadow: 0 8px 24px rgba(149, 157, 165, .2);
   cursor: pointer;
+  z-index: 1;
 
   p {
     margin-bottom: 0;
@@ -109,6 +116,123 @@
   }
 }
 
+.area {
+  // margin-top: -6.25rem;
+  // padding-top: 6.25rem;
+  // margin-bottom: -6.25rem;
+  background: #fff;
+  width: 100%;
+  z-index: -1;
+}
+
+.circles {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(75, 78, 255, .15);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+}
+
+.circles li:nth-child(1) {
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(2) {
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3) {
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5) {
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6) {
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7) {
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8) {
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9) {
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10) {
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
+}
+
 @media all and (min-width: $breakpoint-m) {
   .current-activity {
     margin: 0 10rem 6.25rem 10rem;
@@ -138,6 +262,12 @@
     &__image {
       height: auto;
     }
+  }
+
+  .area {
+    /* margin-top: -13.75rem;
+    padding-top: 13.75rem;
+    margin-bottom: -13.75rem; */
   }
 }
 
