--- a/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
@@ -122,12 +122,15 @@
   // margin-bottom: -6.25rem;
   background: #fff;
   width: 100%;
+  height: 100%;
   z-index: -1;
 }
 
 .circles {
+  position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
