--- a/wp-content/themes/tomoveit/include/components/Container/Container.scss
+++ b/wp-content/themes/tomoveit/include/components/Container/Container.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  white-space: pre-wrap;
 
   height: calc(100vh - 3.75rem - 6.25rem);
   margin-bottom: 3.75rem;
