--- a/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
@@ -35,6 +35,7 @@
   p {
     text-align: left;
     font-style: italic;
+    white-space: pre-wrap;
   }
 
   &__title {
@@ -47,6 +48,7 @@
       line-height: 29px;
       text-align: center;
       margin-bottom: .625rem;
+      white-space: pre-wrap;
     }
 
     p {
@@ -68,6 +70,7 @@
   p {
     margin-bottom: 0;
     text-align: left;
+    white-space: pre-wrap;
   }
 
   &__svg {
