--- a/wp-content/themes/tomoveit/include/scss/general.scss
+++ b/wp-content/themes/tomoveit/include/scss/general.scss
@@ -40,6 +40,7 @@ p {
   text-align: center;
   line-height: 1.4rem;
   margin-bottom: 2rem;
+  white-space: pre-wrap;
 
   font-weight: 700;
 }
@@ -50,6 +51,7 @@ span {
   font-weight: bold;
   font-size: 16px;
   line-height: 20px;
+  white-space: pre-wrap;
 }
 
 h2, .h2 {
@@ -65,6 +67,7 @@ h3, .h3 {
   font-size: 18px;
   line-height: 22px;
   text-align: center;
+  white-space: pre-wrap;
 }
 
 h4, .h4 {
@@ -93,11 +96,17 @@ button {
     line-height: 24px;
     text-align: center;
     margin-bottom: 2rem;
+    white-space: pre-wrap;
+  }
+
+  span {
+    white-space: pre-wrap;
   }
 
   h3, .h3 {
     font-size: 27px;
     line-height: 33px;
+    white-space: pre-wrap;
   }
 
   .alignleft {
