Added new page for company activities

--- a/wp-content/themes/tomoveit/include/scss/colors.scss
+++ b/wp-content/themes/tomoveit/include/scss/colors.scss
@@ -7,4 +7,6 @@ $color-blue: #4b4eff;
 $color-blue-hover: #3e42fa;
 
 $color-light-green: #1abc9c;
+$color-green: #2ecc71;
+
 $color-light-blue: #198df8;
