--- a/wp-content/themes/tomoveit/include/components/StickyButton/StickyButton.scss
+++ b/wp-content/themes/tomoveit/include/components/StickyButton/StickyButton.scss
@@ -28,6 +28,10 @@
 
   box-shadow: 0 20px 40px -20px rgba(50, 50, 93, .3);
 
+  &--green {
+    background: $color-green;
+  }
+
   &:hover {
     opacity: .8;
   }
