Small layout fixes

--- a/wp-content/themes/tomoveit/include/pages/SingleCompanyActivity/SingleCompanyActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/SingleCompanyActivity/SingleCompanyActivity.scss
@@ -14,6 +14,10 @@
     margin: 0 2rem 3.125rem 2rem;
   }
 
+  &__player-wrapper {
+    margin-top: 2rem;
+  }
+
   &__images {
     margin-top: 1.25rem;
 
