--- a/wp-content/themes/tomoveit/include/pages/CompanyActivities/CompanyActivities.scss
+++ b/wp-content/themes/tomoveit/include/pages/CompanyActivities/CompanyActivities.scss
@@ -2,7 +2,7 @@
 @import '../../scss/config';
 
 .company-activities {
-  margin: 0;
+  margin: 0 2rem 2rem 2rem;
 
   h1 {
     font-style: italic;
@@ -85,8 +85,7 @@
 @media all and (min-width: $breakpoint-l) {
   .company-activities {
     transition: all 1s ease-in-out;
-    margin-left: 9.125rem;
-    margin-right: 9.125rem;
+    margin: 0 9.125rem 5rem 9.125rem;
 
     &__container {
       margin-top: 5rem;
