--- a/wp-content/themes/tomoveit/include/pages/SingleActivity/SingleActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/SingleActivity/SingleActivity.scss
@@ -19,8 +19,15 @@
     white-space: pre-wrap;
   }
 
+  &__line {
+    height: 0;
+    width: 100%;
+    border: .5px solid #bdc3c7;
+    margin-bottom: 2.5rem;
+    margin-top: 2.5rem;
+  }
+
   &__text-title {
-    color: $color-gray;
     margin-bottom: 0;
     text-align: left;
   }
@@ -38,17 +45,27 @@
 
 @media all and (min-width: $breakpoint-m) {
   .single-activity {
-    margin: 0 10.6875rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40rem;
+    margin: 0 auto 5rem auto;
+
+    &__player-wrapper {
+      width: 100%;
+      height: 358px;
+      margin-top: 1.25rem;
+    }
+
+    &__line {
+      margin-bottom: 5rem;
+      margin-top: 5rem;
+    }
 
     h1 {
       font-size: 2.25rem;
       line-height: 2.75rem;
     }
-  }
-}
-
-@media all and (min-width: $breakpoint-l) {
-  .single-activity {
-    margin: 0 22.6875rem;
   }
 }
