--- a/wp-content/themes/tomoveit/include/pages/SingleActivity/SingleActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/SingleActivity/SingleActivity.scss
@@ -32,6 +32,16 @@
     text-align: left;
   }
 
+  &__player-wrapper {
+    text-align: center;
+
+    p {
+      text-align: center;
+      margin-top: 1rem;
+      color: $color-gray;
+    }
+  }
+
   &__title {
     &--blue {
       color: $color-light-blue;
