--- a/wp-content/themes/tomoveit/include/pages/SingleCompanyActivity/SingleCompanyActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/SingleCompanyActivity/SingleCompanyActivity.scss
@@ -16,6 +16,14 @@
 
   &__player-wrapper {
     margin-top: 2rem;
+    margin-bottom: 2rem;
+    text-align: center;
+
+    p {
+      text-align: center !important;
+      margin-top: 1rem;
+      color: $color-gray;
+    }
   }
 
   &__images {
@@ -89,6 +97,7 @@
       width: 100%;
       height: 358px;
       margin-top: 2.5rem;
+      margin-bottom: 4rem;
     }
 
     &__container {
@@ -105,11 +114,5 @@
       margin-bottom: 5rem;
       margin-top: 5rem;
     }
-  }
-
-  .react-player {
-    position: absolute;
-    top: 0;
-    left: 0;
   }
 }
