--- a/wp-content/themes/tomoveit/include/pages/Activities/Activities.scss
+++ b/wp-content/themes/tomoveit/include/pages/Activities/Activities.scss
@@ -35,9 +35,12 @@
     flex-direction: column;
   }
 
-  &__button {
-    margin-top: 1rem;
-    margin-bottom: 2rem;
+  &__button-container {
+    margin-top: 2.5rem;
+
+    div:first-child {
+      margin-bottom: 1rem;
+    }
   }
 
   span {
@@ -61,6 +64,14 @@
 @media all and (min-width: $breakpoint-l) {
   .activities {
     margin: 0 9.0625rem 5rem 9.0625rem;
+
+    &__button-container {
+      margin-top: 5rem;
+
+      div:first-child {
+        margin-bottom: 2rem;
+      }
+    }
 
     &__text {
       padding-right: 12.375rem;
