Minor layout tweaks

--- a/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/CurrentActivity/CurrentActivity.scss
@@ -279,6 +279,6 @@
 
 @media all and (min-width: $breakpoint-l) {
   .current-activity {
-    margin: 0 22.6875rem 6.25rem 22.6875rem;
+    margin: 0 22.6875rem 0 22.6875rem;
   }
 }
