--- a/wp-content/themes/tomoveit/include/pages/CompanyActivities/CompanyActivities.scss
+++ b/wp-content/themes/tomoveit/include/pages/CompanyActivities/CompanyActivities.scss
@@ -82,15 +82,18 @@
   }
 }
 
-@media all and (min-width: $breakpoint-l) {
+@media all and (min-width: $breakpoint-m) {
   .company-activities {
     transition: all 1s ease-in-out;
     margin: 0 9.125rem 5rem 9.125rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     &__container {
       margin-top: 5rem;
 
-      display: grid;
+      display: inline-grid;
       grid-template-columns: repeat(3, 1fr);
       column-gap: 5rem;
       row-gap: 5rem;
@@ -103,16 +106,21 @@
   }
 
   .card {
-    width: 100%;
+    height: 11.875rem;
+    max-width: 19.0625rem;
 
     padding-bottom: 0;
     cursor: pointer;
 
     margin-bottom: 0;
 
+    p {
+      line-height: 1.1875rem;
+    }
+
     &__image {
-      height: 190px;
       width: 100%;
+      height: 110px;
     }
   }
 }
