--- a/wp-content/themes/tomoveit/include/pages/SingleActivity/SingleActivity.scss
+++ b/wp-content/themes/tomoveit/include/pages/SingleActivity/SingleActivity.scss
@@ -60,7 +60,7 @@
     justify-content: center;
     align-items: center;
     width: 40rem;
-    margin: 0 auto 5rem auto;
+    margin: 0 auto 0 auto;
 
     &__player-wrapper {
       width: 100%;
