--- a/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
+++ b/wp-content/themes/tomoveit/include/components/CardContainer/CardContainer.scss
@@ -73,20 +73,26 @@
   }
 
   .card {
-    height: 100%;
+    height: 11.875rem;
+    width: 19.0625rem;
 
     padding-bottom: 0;
     cursor: pointer;
 
     margin-bottom: 0;
 
+    p {
+      line-height: 20px;
+      white-space: pre;
+    }
+
     &:not(:last-child) {
       margin-right: 2rem;
     }
 
     &__image {
-      height: 190px;
-      width: 305px;
+      height: 110px;
+      width: 100%;
     }
   }
 }
